--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,23 @@
 [project]
-name = "a11y-mcp"
+name = "code_wcag_a11y"
 version = "0.1.0"
 description = "A WCAG assistant using MCP and LlamaIndex that suggest you relevant WCAG techniques for a component you want to make accessible."
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.11,<3.13"
 dependencies = [
-    "fastmcp>=2.14.1",
-    "llama-index>=0.14.10",
-    "llama-index-embeddings-ollama>=0.8.5",
-    "llama-index-llms-ollama>=0.9.1",
-    "mcp[cli]>=1.25.0",
-    "ollama>=0.6.1",
+   "chromadb>=0.4.22",
+   "cohere>=5.20.1",
+   "fastmcp>=2.14.1",
+   "llama-index>=0.14.10",
+   "llama-index-core>=0.14.12",
+   "llama-index-embeddings-ollama>=0.8.5",
+   "llama-index-llms-ollama>=0.9.1",
+   "llama-index-postprocessor-colbert-rerank>=0.1.0",
+   "mcp[cli]>=1.25.0",
+   "ollama>=0.6.1",
+   "playwright>=1.57.0",
+   "pyax[highlight]>=0.3.3",
+   "pydantic>=2.0",
+   "pydantic-settings>=2.12.0",
+   "sentence-transformers>=5.2.2",
 ]
