--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A WCAG assistant using MCP and LlamaIndex that suggest you releva
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
 dependencies = [
+   "bs4>=0.0.2",
    "chromadb>=0.4.22",
    "cohere>=5.20.1",
    "fastmcp>=2.14.1",
@@ -19,5 +20,6 @@ dependencies = [
    "pyax[highlight]>=0.3.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
+   "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
 ]
